force-app/main/default/objects/HttpLog__c/HttpLog__c.object-meta.xml
<CustomObject>
    <label>Http Log</label>
    <nameField>
        <displayFormat>HTTP-{0}</displayFormat>
        <label>Http Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Http Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>