force-app/main/default/objects/HttpLog__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <inlineHelpText>The endpoint with which the request was made.</inlineHelpText>
    <label>Endpoint</label>
    <length>32779</length>
    <type>LongTextArea</type>
</CustomField>