force-app/main/default/objects/HttpLog__c/fields/HttpMethod__c.field-meta.xml
<CustomField>
    <fullName>HttpMethod__c</fullName>
    <inlineHelpText>The method with which the request was made.</inlineHelpText>
    <label>Http Method</label>
    <length>15</length>
    <type>Text</type>
</CustomField>