force-app/main/default/objects/HttpLog__c/fields/IsCompressed__c.field-meta.xml
<CustomField>
    <fullName>IsCompressed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was the request compressed?</inlineHelpText>
    <label>Compressed</label>
    <type>Checkbox</type>
</CustomField>