force-app/main/default/objects/HttpLog__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>The status message returned from the request.</inlineHelpText>
    <label>Status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>